# sse-bot

./: .gitignore  Makefile  README.md  requirements.txt  setup.cfg  tox.ini
sse_bot/: episode.py  github.py  hooks.py  main.py  slack.py  views.py
