[metadata]
name = sse_bot
version = 0.0.1
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ajm188/sse_bot
author = Andrew Mason
author_email = "mason@case.edu"
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
packages = sse_bot
install_requires =

[wheel]
universal = True
